--- a/dicer/index.html
+++ b/dicer/index.html
@@ -28,6 +28,7 @@
 			}
 		}
 	</script>
+    <script type="module" src="geom.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 
