Migrate to 3D view

--- a/sim-3PRR/index.html
+++ b/sim-3PRR/index.html
@@ -21,38 +21,39 @@
         input {
             width: 300px;
         }
+
+
+        #info {
+            background-color: rgba(0, 0, 0, 0.75);
+        }
+
+        .lil-gui .gui-stats {
+            line-height: var(--widget-height);
+            padding: var(--padding);
+        }
     </style>
 </head>
 
 <body>
-    <h1>3-PRR Mechanism Simulator</h1>
-    ↑X+
-    →Z+
-    <canvas id="mechanismCanvas" width="400" height="300"></canvas>
-    <div>
-        z1 <input type="range" id="slider1" min="0" max="100" value="30"><br />
-        z2 <input type="range" id="slider2" min="0" max="150" value="40"><br />
-        z3 <input type="range" id="slider3" min="0" max="150" value="60">
-    </div>
-    <button id="resetButton">Reset</button>
-    <button id="playButton">Play</button>
-
-    <div style="flex:auto">
-        <canvas id="inputSpaceCanvas" width="200" height="200"></canvas>
-        <canvas id="outputSpaceCanvas" width="200" height="200"></canvas>
-    </div>
+    <div id="container"></div>
 
     <figure class="highcharts-figure">
         <div id="container"></div>
     </figure>
 
+    <script type="importmap">
+		{
+			"imports": {
+				"three": "./three.module.min.js",
+				"three/addons/": "./three-addons/"
+			}
+		}
+	</script>
+
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
-
-
 
     <script type="module" src="main.js">
     </script>
