More accurate model

--- a/sim-3PRR/index.html
+++ b/sim-3PRR/index.html
@@ -37,9 +37,9 @@
 <body>
     <div id="container"></div>
 
-    <figure class="highcharts-figure">
-        <div id="container"></div>
-    </figure>
+    
+        <div id="chart"></div>
+    
 
     <script type="importmap">
 		{
