--- a/sim-3PRR/index.html
+++ b/sim-3PRR/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3-PRR Mechanism Simulator</title>
+    <title>Y-plane ASSY Simulator</title>
     <style>
+        body {
+            margin :0
+        }
         #info {
             background-color: rgba(0, 0, 0, 0.75);
         }
@@ -19,11 +22,7 @@
 
 <body>
     <div id="container"></div>
-
     
-        <div id="chart"></div>
-    
-
     <script type="importmap">
 		{
 			"imports": {
@@ -32,14 +31,7 @@
 			}
 		}
 	</script>
-
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
-    <script type="module" src="main.js">
-    </script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
