Adjust orientation to WG-1, fix bug at coarse grid dicing

--- a/dicer/index.html
+++ b/dicer/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>RepEDM dicer</title>
+    <title>Spark dicer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="main.css">
     <style>
-        #info {
-            background-color: rgba(0, 0, 0, 0.75);
+        body {
+            margin: 0
         }
 
         .lil-gui .gui-stats {
