Separate polygon handling code

--- a/dicer/index.html
+++ b/dicer/index.html
@@ -27,6 +27,7 @@
 			}
 		}
 	</script>
+    <script type="module" src="mesh.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 
