Split "pure-compute" code into voxel.js

--- a/dicer/index.html
+++ b/dicer/index.html
@@ -28,6 +28,7 @@
 		}
 	</script>
     <script type="module" src="mesh.js"></script>
+    <script type="module" src="voxel.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 
