Control x axis from dashboard

--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -21,6 +21,7 @@
             <h1>Axes</h1>
             <button class="pure-button" @click="move_xm">X-</button>
             <button class="pure-button" @click="move_xp">X+</button>
+            <button class="pure-button" @click="home">Home</button>
 
             <h1>Manual Command</h1>
             <textarea class="pure-input-1-2" v-model="data" rows="10" cols="50"
