Parse grblHAL status

--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -19,6 +19,7 @@
             <button class="pure-button" @click="refresh">Refresh</button>
 
             <h1>Axes</h1>
+            <div>X: {{xp}} Y: {{yp}} Z: {{zp}}</div>
             <button class="pure-button" @click="move_xm">X-</button>
             <button class="pure-button" @click="move_xp">X+</button>
             <button class="pure-button" @click="home">Home</button>
