--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="pure-u-3-5">
             <h1>Serial Log</h1>
-            <pre style="height:500px; overflow: scroll">{{ log_output }}</pre>
+            <pre ref="logOutput" style="height:500px; overflow: scroll">{{ log_output }}</pre>
         </div>
     </div>
 
