--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -26,10 +26,14 @@
             <button class="pure-button" @click="send" :disabled="commands.length === 0">Execute</button>
             <button class="pure-button" @click="cancel">Cancel</button>
             <p>Exec Status: {{ exec_status }}</p>
+            <button class="pure-button" @click="analyze_log">Analyze Log</button>
         </div>
         <div class="pure-u-3-5">
             <h1>Serial Log</h1>
             <pre ref="logOutput" style="height:500px; overflow: scroll">{{ log_output }}</pre>
+
+            <h1>EDML (250ms/line)</h1>
+            <canvas ref="edml" width="500" height="1000"></canvas>
         </div>
     </div>
 
