--- a/dicer/index.html
+++ b/dicer/index.html
@@ -28,9 +28,9 @@
 			}
 		}
 	</script>
-    <script type="module" src="mesh.js"></script>
-    <script type="module" src="voxel.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="dist/mesh.js"></script>
+    <script type="module" src="dist/voxel.js"></script>
+    <script type="module" src="dist/main.js"></script>
 </body>
 
 </html>
