--- a/dicer/index.html
+++ b/dicer/index.html
@@ -1,3 +1,4 @@
+<!-- SPDX-FileCopyrightText: 2025 夕月霞 -->
 <!-- SPDX-License-Identifier: AGPL-3.0-or-later -->
 <!DOCTYPE html>
 <html lang="en">
@@ -23,14 +24,14 @@
     <script type="importmap">
 		{
 			"imports": {
-				"three": "./three.module.min.js",
-				"three/addons/": "./three-addons/"
+				"three": "./vendor/three/three.module.min.js",
+				"three/addons/": "./vendor/three/addons/"
 			}
 		}
 	</script>
-    <script type="module" src="dist/mesh.js"></script>
-    <script type="module" src="dist/voxel.js"></script>
-    <script type="module" src="dist/main.js"></script>
+    <script type="module" src="./mesh.js"></script>
+    <script type="module" src="./voxel.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
