--- a/dicer/test.html
+++ b/dicer/test.html
@@ -1,20 +1,21 @@
+<!-- SPDX-FileCopyrightText: 2025 夕月霞 -->
 <!-- SPDX-License-Identifier: AGPL-3.0-or-later -->
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
 <title>QUnit</title>
-<link rel="stylesheet" href="test/qunit-2.23.1.css">
+<link rel="stylesheet" href="./vendor/qunit/qunit-2.23.1.css">
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script type="importmap">
 		{
 			"imports": {
-				"three": "./three.module.min.js"
+				"three": "./vendor/three/three.module.min.js"
 			}
 		}
 	</script>
-  <script type="module" src="test/qunit-2.23.1.js"></script>
-  <script type="module" src="test/voxel.js"></script>
+  <script type="module" src="./vendor/qunit/qunit-2.23.1.js"></script>
+  <script type="module" src="./test/voxel.js"></script>
 </body>
 </html>
