Refactor voxel.ts (split into CPU vs GPU)

--- a/dicer/test.html
+++ b/dicer/test.html
@@ -16,6 +16,7 @@
 		}
 	</script>
   <script type="module" src="./vendor/qunit/qunit-2.23.1.js"></script>
-  <script type="module" src="./test/voxel.js"></script>
+  <script type="module" src="./test/cpu-geom.js"></script>
+  <script type="module" src="./test/gpu-geom.js"></script>
 </body>
 </html>
