Split Main/Planner module

--- a/dicer/index.html
+++ b/dicer/index.html
@@ -29,8 +29,11 @@
 			}
 		}
 	</script>
+    <script type="module" src="./cpu-geom.js"></script>
+    <script type="module" src="./gpu-geom.js"></script>
     <script type="module" src="./mesh.js"></script>
-    <script type="module" src="./voxel.js"></script>
+    <script type="module" src="./tracking-voxel.js"></script>
+    <script type="module" src="./ui-base.js"></script>
     <script type="module" src="./main.js"></script>
 </body>
 
