--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -38,6 +38,7 @@
     </div>
 
     <script src="vue.global.js"></script>
+    <script src="spooler.js"></script>
     <script src="main.js"></script>
 </body>
 
