--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -12,9 +12,9 @@
     <div class="pure-g" id="app">
         <div class="pure-u-2-5">
             <h1>Status</h1>
-            <p>Spooler: {{ spooler_status }}</p>
-            <p>Core: {{ core_status }}</p>
-            <button class="pure-button" @click="refresh">Refresh</button>
+            <p>
+                <span :title="'Detailed status: ' + client_status">{{ status_emoji }} {{ ui_status }}</span>
+            </p>
 
             <h1>Axes</h1>
             <div>X: {{xp}} Y: {{yp}} Z: {{zp}}</div>
