Simplify spooler logic

--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -17,7 +17,7 @@
             </p>
 
             <h1>Axes</h1>
-            <div>X: {{xp}} Y: {{yp}} Z: {{zp}}</div>
+            <div>{{ statusText }}</div>
             <button class="pure-button" @click="init">Init</button>
 
             <h1>Manual Command</h1>
