dashboard: reduce amgibuity of "keep on exec"

--- a/shell-dashboard/index.html
+++ b/shell-dashboard/index.html
@@ -66,7 +66,7 @@
             <button class="pure-button" @click="cancel">Cancel</button>
             <button class="pure-button" @click="analyzeLog">Analyze Log</button>
             <label class="pure-checkbox">
-                <input type="checkbox" v-model="keepOnExec"> keep on exec
+                <input type="checkbox" v-model="clearOnExec"> clear on exec
             </label>
 
             <h1>Jog</h1>
